<resources>
    <string name="app_name">TrueCitizenQuiz</string>
    <string name="question_declaration">The (India) Declaration of Independence was adopted in 1947.</string>
    <string name="true_text">True</string>
    <string name="false_text">False</string>
    <string name="correct_answer">That\'s Correct</string>
    <string name="wrong_answer">That\'s Incorrect</string>
    <string name="question_constitution">The Supreme law of the land is the Constitution.</string>
    <string name="question_amendments">The Constitution has 26 Amendments.</string>
    <string name="question_independence_rights">The two rights in the Declaration of Independence:
        \n \t<b>life</b> \n \t<b>pursit of happiness</b>.</string>
    <string name="question_religion">Freedom for religion means:
        \n \t<b>You can practice any religion, or not practice a religion</b>.</string>
    <string name="question_government">Journalists is one branch or part of the government.</string>
    <string name="question_government_feds">Congress does not make federal laws.</string>
    <string name="question_government_senators">There are one hundred (100) U.S. Senators.</string>
    <string name="next_text">next</string>
    <string name="user_image">User Image</string>
    <string name="back_text">back</string>
</resources>