<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity"
    android:background="@android:color/holo_green_light">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/user"
        android:contentDescription="@string/user_image"/>

    <TextView
        android:id="@+id/answer_text_view"
        android:text="@string/question_amendments"
        android:padding="8dp"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/true_button"
            android:text="@string/true_text"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/false_button"
            android:text="@string/false_text"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:id="@+id/back_button"
            android:contentDescription="@string/back_text"
            android:src="@drawable/back"/>
        <ImageButton
            android:layout_marginStart="10dp"
            android:contentDescription="@string/next_text"
            android:id="@+id/next_button"
            android:src="@drawable/next"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp" />

    </LinearLayout>

</LinearLayout>